syntax = "proto3";
import "google/api/annotations.proto";
import  "common/Response.proto";

package user.relation;

//option java_multiple_files = true;
option java_package = "com.bubble.grpc.user.relation.service";
option java_outer_classname = "UserRelationProto";
//option objc_class_prefix = "HLW";


service UserRelationService {
    rpc getFollowersByUserId(user.relation.UserId) returns (common.Response) {
        option (google.api.http) = {
                get: "/api/v1/relations/{userId}/followers"
            };
    }


    rpc findUsersByFollowerId(user.relation.UserId) returns (common.Response) {
        option (google.api.http) = {
                get: "/api/v1/relations/{userId}/following"
            };
    }

    rpc follow(user.relation.FollowArgs) returns (common.Response) {
        option (google.api.http) = {
                post: "/api/v1/relations/{userId}"
                body: "*"
            };
    }


    rpc unfollow(user.relation.UnfollowArgs) returns (common.Response) {
        option (google.api.http) = {
                post: "/api/v1/relations/{userId}/following/{followBy}"
                body: "*"
            };
    }
}

message FollowArgs {
    uint64 userId = 1;
    uint64 followBy = 2;
}

message UnfollowArgs {
    uint64 userId = 1;
    uint64 followBy = 2;
}

message RelationList {
    repeated user.relation.UserRelation relation = 1;
}

message RelationId {
    uint64 id = 1;
}

message UserId {
    uint64 userId = 1;
}

message UserRelation {
    uint64 id = 1;
    uint64 followerId = 2;
    string followerNickname = 3;
    string followerSelfSignature = 4;
    string followerAvatarUrl = 5;

    uint64 userId = 6;
    string userNickname = 7;
    string userSelfSignature = 8;
    string userAvatarUrl = 9;
}
